// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tier-visibility — golden snapshot per tier > tier=accel_ent visible slugs 1`] = `
[
  "blockchain.sync",
  "data_room.access",
  "equity_offer.request",
  "esop.manage",
  "grant_finder",
  "investor_links.premium",
  "money_radar",
  "pdf_branding",
  "reseller.console",
  "reseller.create_startup",
  "reseller.grant_credits",
  "secondary_market.view",
  "share_management",
  "startup_package",
  "vesting.write",
]
`;

exports[`tier-visibility — golden snapshot per tier > tier=accel_growth visible slugs 1`] = `
[
  "blockchain.sync",
  "data_room.access",
  "equity_offer.request",
  "esop.manage",
  "grant_finder",
  "investor_links.premium",
  "money_radar",
  "pdf_branding",
  "secondary_market.view",
  "share_management",
  "startup_package",
  "vesting.write",
]
`;

exports[`tier-visibility — golden snapshot per tier > tier=accel_starter visible slugs 1`] = `
[
  "blockchain.sync",
  "data_room.access",
  "equity_offer.request",
  "esop.manage",
  "grant_finder",
  "investor_links.premium",
  "money_radar",
  "pdf_branding",
  "secondary_market.view",
  "share_management",
  "startup_package",
  "vesting.write",
]
`;

exports[`tier-visibility — golden snapshot per tier > tier=advisor visible slugs 1`] = `
[
  "blockchain.sync",
  "data_room.access",
  "equity_offer.request",
  "esop.manage",
  "grant_finder",
  "investor_links.premium",
  "money_radar",
  "pdf_branding",
  "secondary_market.view",
  "share_management",
  "startup_package",
  "vesting.write",
]
`;

exports[`tier-visibility — golden snapshot per tier > tier=angel visible slugs 1`] = `
[
  "data_room.access",
  "grant_finder",
  "investor_links.premium",
  "money_radar",
  "startup_package",
]
`;

exports[`tier-visibility — golden snapshot per tier > tier=enterprise visible slugs 1`] = `
[
  "blockchain.sync",
  "data_room.access",
  "equity_offer.request",
  "esop.manage",
  "grant_finder",
  "investor_links.premium",
  "money_radar",
  "pdf_branding",
  "reseller.console",
  "reseller.create_startup",
  "reseller.grant_credits",
  "secondary_market.view",
  "share_management",
  "startup_package",
  "vesting.write",
]
`;

exports[`tier-visibility — golden snapshot per tier > tier=free visible slugs 1`] = `
[
  "startup_package",
]
`;

exports[`tier-visibility — golden snapshot per tier > tier=growth visible slugs 1`] = `
[
  "blockchain.sync",
  "data_room.access",
  "equity_offer.request",
  "esop.manage",
  "grant_finder",
  "investor_links.premium",
  "money_radar",
  "pdf_branding",
  "secondary_market.view",
  "share_management",
  "startup_package",
  "vesting.write",
]
`;

exports[`tier-visibility — golden snapshot per tier > tier=scale visible slugs 1`] = `
[
  "blockchain.sync",
  "data_room.access",
  "equity_offer.request",
  "esop.manage",
  "grant_finder",
  "investor_links.premium",
  "money_radar",
  "pdf_branding",
  "secondary_market.view",
  "share_management",
  "startup_package",
  "vesting.write",
]
`;

exports[`tier-visibility — golden snapshot per tier > tier=starter visible slugs 1`] = `
[
  "data_room.access",
  "grant_finder",
  "investor_links.premium",
  "money_radar",
  "startup_package",
]
`;

exports[`tier-visibility — golden snapshot per tier > tier=vc_ent visible slugs 1`] = `
[
  "blockchain.sync",
  "data_room.access",
  "equity_offer.request",
  "esop.manage",
  "grant_finder",
  "investor_links.premium",
  "money_radar",
  "pdf_branding",
  "reseller.console",
  "reseller.create_startup",
  "reseller.grant_credits",
  "secondary_market.view",
  "share_management",
  "startup_package",
  "vesting.write",
]
`;

exports[`tier-visibility — golden snapshot per tier > tier=vc_small visible slugs 1`] = `
[
  "blockchain.sync",
  "data_room.access",
  "equity_offer.request",
  "esop.manage",
  "grant_finder",
  "investor_links.premium",
  "money_radar",
  "pdf_branding",
  "secondary_market.view",
  "share_management",
  "startup_package",
  "vesting.write",
]
`;
